feat: unify class/assignment workflows and lesson plan UX
- add backend DTOs/repository and controller updates for submissions, grading, enrollment, and lesson plans

- add frontend backend-api proxy, grading route, lesson-plan detail route, settings redirect, and student available-classes pages

- refactor teacher/student dashboards, assignments, classes, messages, profile, and API client usage with resilient endpoint fallbacks

- update docker/mongo configuration, auth/session data flow, validation rules, and project docs/scripts